# agda-ffi-hs-example-image-manip

./: .gitignore  LICENSE  README.md  build.sh  cabal.project  image-manip.agda-lib  image-manip.cabal  image.frag  image.vert  lab5.gfx.1.agda-lib  lab5.gfx.1.cabal
src/: Main.agda  Main.hs
src/Lab/: Algorithm.agda  Bilinear.agda  CrucianCarp.agda  Environment.agda  ImageBox.agda  Input.agda  NearestNeighbor.agda  Params.agda  Prelude.agda  Store.agda  Util.agda
src/Lab/Algorithm/: Bilinear.agda  CrucianCarp.agda  NearestNeighbor.agda  Neighborhood.agda  Rotation.agda
src/Lab/Algorithm/Neighborhood/: Kernel.agda  Median.agda
src/Lab/Class/: Level.agda  Product.agda  Sum.agda
src/Lab/Data/: Vec.agda
src/Lab/Data/Vec/Relation/Unary/: All.agda
src/Lab/Input/: Empty.agda  Kernel.agda  Options.agda  Rotation.agda  Scale2D.agda
src/Lab/Rendering/: Program.agda
src/Lab/Rendering/Mesh/: Quad.agda
src/Lab/Rendering/Program/: Textured2D.agda
