cabal-version:      2.4
name:               lab5-gfx1
version:            0.1.0.0

executable lab5-gfx1
    main-is:          Main.hs
    other-modules:
        MAlonzo.Code.Main
        MAlonzo.Code.Lab.Util
        MAlonzo.Code.Lab.ImageBox
        MAlonzo.Code.Lab.NearestNeighbor
        MAlonzo.Code.Lab.Bilinear
        MAlonzo.Code.Lab.CrucianCarp
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        sdl2 ^>=2.5.0.0,
        dear-imgui ^>=2.1.1,
        text ==2.0.1,
        transformers ==0.5.6.2,
        JuicyPixels ==3.3.8,
        vector ==0.12.3.1,
        linear,
        array,
        deepseq,
        stm,
        StateVar,
        bytestring,
        primitive,
        unliftio-core,
