cabal-version:      2.4
name:               lab5-gfx1
version:            0.1.0.0

executable lab5-gfx1
    main-is:          Main.hs
    other-modules:
        -- MAlonzo.Code.Lab.Class.Sum
        MAlonzo.Code.Lab.Algorithm
        MAlonzo.Code.Lab.Algorithm.Bilinear
        MAlonzo.Code.Lab.Algorithm.CrucianCarp
        MAlonzo.Code.Lab.Algorithm.NearestNeighbor
        MAlonzo.Code.Lab.Algorithm.Rotation
        MAlonzo.Code.Lab.Class.Level
        MAlonzo.Code.Lab.Class.Product
        MAlonzo.Code.Lab.Environment
        MAlonzo.Code.Lab.ImageBox
        MAlonzo.Code.Lab.Input
        MAlonzo.Code.Lab.Input.Rotation
        MAlonzo.Code.Lab.Input.Scale2D
        MAlonzo.Code.Lab.Params
        MAlonzo.Code.Lab.Prelude
        MAlonzo.Code.Lab.Rendering.Mesh.QQuad
        MAlonzo.Code.Lab.Rendering.Program
        MAlonzo.Code.Lab.Rendering.Program.Textured2D
        MAlonzo.Code.Main

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        sdl2 ^>=2.5.0.0,
        dear-imgui ^>=2.1.1,
        text ==2.0.1,
        transformers ==0.6.0.4,
        JuicyPixels ==3.3.8,
        vector ==0.12.3.1,
        OpenGL ==3.0.3.0,
        OpenGLRaw,
        ObjectName,
        linear,
        array,
        deepseq,
        stm,
        StateVar,
        bytestring,
        primitive,
        unliftio-core,
        binary,
